RESOLVED FIXED132150
[iOS WK2] flickery scrolling with overflow-scrolling:touch
https://bugs.webkit.org/show_bug.cgi?id=132150
Summary [iOS WK2] flickery scrolling with overflow-scrolling:touch
Simon Fraser (smfr)
Reported 2014-04-24 15:31:27 PDT
[iOS WK2] flickery scrolling with overflow-scrolling:touch
Attachments
Patch (5.60 KB, patch)
2014-04-24 15:34 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2014-04-24 15:34:40 PDT
Simon Fraser (smfr)
Comment 2 2014-04-24 15:35:08 PDT
WebKit Commit Bot
Comment 3 2014-04-24 15:35:36 PDT
Attachment 230112 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4 2014-04-28 10:42:35 PDT
Note You need to log in before you can comment on or make changes to this bug.